# mandate

./: .japr.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
src/japr/: japr.py  util.py
src/japr/check_providers/: __init__.py  ai_instruction_check_provider.py
src/japr/templates/: ai_instructions.md
src/mandate/: mandate.py  template_util.py
src/mandate/check_providers/: __init__.py  ai_instruction_check_provider.py  ci_check_provider.py  contributing_check_provider.py  csharp_check_provider.py  git_check_provider.py  github_check_provider.py  javascript_check_provider.py  license_check_provider.py  python_check_provider.py  readme_check_provider.py  rust_check_provider.py  shell_check_provider.py  terraform_check_provider.py
test/: test_failure_scenarios.py  test_pass_scenarios.py
test/scenarios/failures/AI001/: README.md
test/scenarios/failures/AI002/: agents.md
test/scenarios/passes/AI001/: agents.md
